--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,32 @@
-# Archivos de sistema
-.DS_Store
-Thumbs.db
-
-# Configuración de editores
-.vscode/
-.idea/
-
-# Dependencias
-node_modules/
-venv/
-*.egg-info/
-
-# Archivos de compilación
-dist/
-build/
-out/
-
-# Logs y temporales
+# Logs
+logs
 *.log
-*.tmp
-*.swp
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Archivos de entorno
+node_modules
+dist
+dist-ssr
+*.local
+
+# Environment variables (CRITICAL - contains secrets)
 .env
 .env.local
 .env.*.local
 
-# Cobertura de tests
-coverage/
+# Lock files (optional - keep if using specific package manager)
+pnpm-lock.yaml
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
