--- a/package.json
+++ b/package.json
@@ -10,12 +10,7 @@
     "build": "tsc -b && vite build",
     "build:prod": "tsc -b && BUILD_MODE=prod vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "db:generate": "prisma generate",
-    "db:push": "prisma db push",
-    "db:migrate": "prisma migrate dev",
-    "db:seed": "tsx prisma/seed.ts",
-    "db:studio": "prisma studio"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -73,7 +68,6 @@
   "devDependencies": {
     "@vercel/node": "^3.2.0",
     "@eslint/js": "^9.15.0",
-    "@prisma/client": "^7.1.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
@@ -94,7 +88,6 @@
     "html5-qrcode": "^2.3.8",
     "jose": "^6.1.3",
     "postcss": "8.4.49",
-    "prisma": "^7.1.0",
     "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
